--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 
   <!-- Include the AngularJS library -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <link href="css/main.css" rel="stylesheet" />
+
+
 </head>
 <body ng-app="yelpPoco">
   <div class="container">
@@ -19,24 +24,29 @@
       <!-- <h2>{{data}}</h2> -->
       <div ng-repeat="place in data">
         <item-view place="place"></item-view>
-      <div>
-    </div>
+        <div>
+        </div>
 
-  </div>
-
-  
+      </div>
 
 
-  <!-- include -->
-  <!-- controllers -->
-  <script src="js/app.js"></script>
-  <script src="js/controllers/MainController.js"></script>
 
-  <!-- Directives -->
-  <script src="js/directives/itemView.js"></script>
-  <!-- Service -->
-  <script src="js/services/yelpFactory.js"></script>
+      <script type="text/javascript" src="https://www.iatspayments.com/AURA/AURA.aspx?PID=PA7C139169976EF104">
+      </script>
+      <!-- include -->
+      <!-- controllers -->
 
-</body>
+      <script src="js/app.js"></script>
+      <script src="js/controllers/MainController.js"></script>
 
-</html>
+      <!-- Directives -->
+      <script src="js/directives/itemView.js"></script>
+      <!-- Service -->
+      <script src="js/services/yelpFactory.js"></script>
+
+      <script src="modifyPay.js"></script>
+
+
+    </body>
+
+    </html>
