--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body ng-app="yelpPoco">
   <div class="container">
   	<div class="jumbotron">
-      <h1>Food here in Poco</h1>
-      <p> There are food at Poco, and here they are</p>
+      <h1>Food Around</h1>
+      <p> Don't starve, find food!</p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
   </div>
@@ -17,26 +17,34 @@
   <div class="container">
     <div ng-controller="MainController">
       <!-- <h2>{{data}}</h2> -->
+      <div class="row" style="margin-top:50px;">
+        <div class="col-xs-12">
+          <input class="form-control" type="text" placeholder="enter a city" ng-model="city">
+          <br>
+          <br>
+          <p class="text-center"><button class="btn btn-primary" ng-click="getFood(city)">Get Places to eat</button></p>
+        </div>
+      </div>
       <div ng-repeat="place in data">
         <item-view place="place"></item-view>
-      <div>
-    </div>
+        <div>
+        </div>
 
-  </div>
-
-  
+      </div>
 
 
-  <!-- include -->
-  <!-- controllers -->
-  <script src="js/app.js"></script>
-  <script src="js/controllers/MainController.js"></script>
 
-  <!-- Directives -->
-  <script src="js/directives/itemView.js"></script>
-  <!-- Service -->
-  <script src="js/services/yelpFactory.js"></script>
 
-</body>
+      <!-- include -->
+      <!-- controllers -->
+      <script src="js/app.js"></script>
+      <script src="js/controllers/MainController.js"></script>
 
-</html>
+      <!-- Directives -->
+      <script src="js/directives/itemView.js"></script>
+      <!-- Service -->
+      <script src="js/services/yelpFactory.js"></script>
+
+    </body>
+
+    </html>
