--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <input class="form-control" type="text" placeholder="enter a city" ng-model="city">
           <br>
           <br>
-          <p class="text-center"><button class="btn btn-primary" ng-click="getFood(city)">Get Places to eat</button></p>
+          <p class="text-center"><button class="btn btn-primary" ng-click="getFood(city)">Get Places to Eat</button></p>
         </div>
       </div>
       <div ng-repeat="place in data">
